[gd_scene load_steps=4 format=3 uid="uid://brfq32hg5bfi2"]

[ext_resource type="Script" path="res://entities/enemies/spawner/enemy_spawner.gd" id="1_vkf78"]
[ext_resource type="PackedScene" uid="uid://lbaknsn35a0g" path="res://entities/enemies/impl/basic_enemy.tscn" id="2_byoxw"]
[ext_resource type="PackedScene" uid="uid://br0br7lxdlqwh" path="res://entities/enemies/impl/basic_no_weapon_enemy.tscn" id="3_j67mc"]

[node name="EnemySpawner" type="Node"]
script = ExtResource("1_vkf78")
enemies = [ExtResource("2_byoxw"), ExtResource("3_j67mc")]

[node name="SpawnDelay" type="Timer" parent="."]
autostart = true

[node name="CycleDelay" type="Timer" parent="."]

[connection signal="timeout" from="SpawnDelay" to="." method="_on_spawn_delay_timeout"]
[connection signal="timeout" from="CycleDelay" to="." method="_on_cycle_delay_timeout"]
